refactor: more renaming and moving packages on banking/account